# omegon

./: .cleave-prompt.md  .gitignore  .gitmodules  .lipstyk.toml  .npmignore  .session_log  AGENTS.md  AUSPEX_MANAGED_AGENT_CONTRACT_FOLLOWUP.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EXTENSIONS.md  EXTENSION_INTEGRATION.md  EXTENSION_SDK.md  EXTENSION_SYSTEM_SUMMARY.md  FIXME.md  HANDOFF.md  Justfile  PRIVACY.md  README.md  SCRIBE_RPC.md  SPINNER_VERBS.md  TERMS.md  THIRD_PARTY_NOTICES.md  bootstrap.sh  edges.test.ts  extraction-v2.ts  extraction.test.ts  factstore.test.ts  factstore.ts  flake.nix  index.ts  migration.test.ts  migration.ts  minds.ts  package.json  release-plz.toml  triggers.ts
.omegon/: history  (+3 more)
core/: .gitignore  CHANGELOG.md  Cargo.toml  Containerfile  Cross.toml  README.md  install.sh
core/.omegon/: agent-journal.md
core/crates/omegon/: Cargo.toml  build.rs
core/crates/omegon-codescan/src/: bm25.rs  cache.rs  code.rs  indexer.rs  lib.rs
core/crates/omegon-extension/: Cargo.toml  README.md
core/crates/omegon-extension/src/: capabilities.rs  error.rs  extension.rs  host_actions.rs  lib.rs  manifest.rs  mcp_shim.rs  rpc.rs  streaming.rs  ui_contributions.rs
core/crates/omegon-extension/src/actions/: mod.rs  terminal.rs
core/crates/omegon-extension/tests/: protocol_smoke.rs
core/crates/omegon-git/: Cargo.toml
core/crates/omegon-git/src/: commit.rs  jj.rs  lib.rs  merge.rs  repo.rs  status.rs  submodule.rs  worktree.rs
core/crates/omegon-memory/: schema-contract.json
core/crates/omegon-memory/src/: embedding.rs  inmemory.rs  lib.rs  provider.rs  renderer.rs  service.rs  sqlite.rs  types.rs  vectors.rs
core/crates/omegon-opsx/: Cargo.toml
core/crates/omegon-opsx/src/: fsm.rs  store.rs
core/crates/omegon-rbac/: Cargo.toml
core/crates/omegon-rbac/src/: lib.rs
core/crates/omegon-secrets/: Cargo.toml
core/crates/omegon-secrets/src/: lib.rs  recipes.rs  redact.rs  resolve.rs  store.rs  vault.rs
core/crates/omegon-skills/: Cargo.toml
core/crates/omegon-skills/src/: lib.rs
core/crates/omegon-traits/: Cargo.toml
core/crates/omegon-traits/src/: lib.rs
core/crates/omegon-web/: Cargo.toml
core/crates/omegon-web/src/: extract.rs  http.rs  lib.rs
core/crates/omegon-web/src/engines/: bing.rs  duckduckgo.rs  google.rs  mod.rs
core/crates/omegon/.omegon/: profile.json
core/crates/omegon/.omegon/runtime/: workspace.json  workspaces.json
core/crates/omegon/examples/: fractal_demo.rs  instrument_lab.rs
core/crates/omegon/src/: acp.rs  acp_plan_tasks.rs  acp_worker.rs  agent_manifest.rs  armory.rs  auth.rs  autonomy.rs  backend.rs  behavior.rs  bootstrap.rs  bridge.rs  bundle_verify.rs  bus.rs  catalog.rs  checkpoint.rs  child_agent.rs  cleave_smoke.rs  clipboard.rs  code_act.rs  code_act_proxy.rs  code_act_sandbox.rs  command_registry.rs  context.rs  control_actions.rs  control_runtime.rs  control_tls.rs  conversation.rs  demo.rs  editor_skills.rs  embedding.rs  execution_substrate.rs  extension_cli.rs  extension_registry.rs  filelock.rs  github_copilot.rs  host_context.rs  inference_discovery.rs  inference_inventory.rs  inference_manifest.rs  inference_runtime.rs  (+47 more)
core/crates/omegon/src/acp/: extension_rpc.rs  labels.rs  model_options.rs  resource_context.rs  surfaces.rs
core/crates/omegon/src/capabilities/: agents.rs  armory.rs  extensions.rs  inventory.rs  mod.rs  profiles.rs  runs.rs  secrets.rs
core/crates/omegon/src/cleave/: context.rs  guardrails.rs  orchestrator.rs  plan.rs  progress.rs  state.rs  test_architect.rs  waves.rs  worktree.rs
core/crates/omegon/src/control/: mod.rs  secrets.rs  variables.rs
core/crates/omegon/src/eval/: mod.rs  report.rs  scenario.rs  store.rs
core/crates/omegon/src/evidence/: mod.rs  schema.rs  store.rs  support.rs
core/crates/omegon/src/extensions/: approval.rs  config_store.rs  host_actions.rs  manifest.rs  mod.rs  sdk_compat.rs  state.rs  tool_result.rs  voice_bridge.rs  widgets.rs
core/crates/omegon/src/features/: adapter.rs  audit_log.rs  auth.rs  cleave.rs  clipboard.rs  context.rs  delegate.rs  harness_settings.rs  lifecycle.rs  loop_jobs.rs  manage_tools.rs  memory.rs  mod.rs  model_budget.rs  mutation.rs  persona.rs  prompt.rs  session_log.rs  skills.rs  terminal_title.rs  usage.rs  user_commands.rs
core/crates/omegon/src/ipc/: connection.rs  mod.rs  snapshot.rs  wire.rs
core/crates/omegon/src/lifecycle/: archive.rs  context.rs  design.rs  doctor.rs  mod.rs  mutation.rs  query.rs  read_model.rs  spec.rs  sync.rs  types.rs
core/crates/omegon/src/nex/: capabilities.rs  compose.rs  container.rs  manifest.rs  mod.rs  profile.rs  registry.rs  spawn.rs  substrate.rs
core/crates/omegon/src/plugins/: armory.rs  armory_feature.rs  http_feature.rs  manifest.rs  mcp.rs  mod.rs  persona_loader.rs  registry.rs  tool_capabilities.rs
core/crates/omegon/src/sentry/: board.rs  executor.rs  file_board.rs  flynt_board.rs  integration_tests.rs  mod.rs  routes.rs  state_db.rs  tree_board.rs  types.rs
core/crates/omegon/tests/: daemon_serve_blackbox.rs  live_upstream_smoke.rs  openapi_contract_lint.rs  sandbox_boundary_smoke.rs
core/crates/opsx-core/src/: types.rs
core/crates/scribe-rpc/: manifest.toml
core/crates/styrene-work/: Cargo.toml
core/crates/styrene-work-local/: Cargo.toml
core/crates/styrene-work-local/src/: lib.rs
core/crates/styrene-work-model/: Cargo.toml
core/crates/styrene-work-model/src/: lib.rs
core/crates/styrene-work-relations/: Cargo.toml
core/crates/styrene-work-relations/src/: lib.rs
core/crates/styrene-work-runtime/: Cargo.toml
core/crates/styrene-work-runtime/src/: lib.rs
core/crates/styrene-work/src/: lib.rs
core/docs/: README.md  architecture.md  cli-reference.md  configuration.md  getting-started.md  tools.md
core/npm/: publish.sh
core/npm/omegon/: README.md
core/site/: index.html  nginx.conf
extensions/omegon-browser/: Cargo.toml  README.md  manifest.toml
extensions/omegon-browser/src/: main.rs
extensions/omegon-tdd-savepoint/: Cargo.toml  manifest.toml
extensions/omegon-tdd-savepoint/src/: kernel.rs  main.rs
(+2027 files in other folders)
