[workspace]
resolver = "2"
members = [
    "core/crates/omegon",
    "core/crates/omegon-git",
    "core/crates/omegon-memory",
    "core/crates/omegon-secrets",
    "core/crates/omegon-traits",
    "core/crates/omegon-opsx",
    "core/crates/omegon-rbac",
    "core/crates/omegon-skills",
    "core/crates/styrene-work-model",
    "core/crates/styrene-work-runtime",
    "core/crates/omegon-web",
]

[profile.release]
lto = "fat"
strip = true
codegen-units = 1
opt-level = 3
panic = "abort"

# Fast release builds for development iteration. Use with:
#   cargo build --profile dev-release -p omegon
# Produces an optimized binary without the 8-16GB RAM link-time cost
# of full LTO. ~90% of release performance, ~10% of link time.
[profile.dev-release]
inherits = "release"
lto = "thin"
codegen-units = 4
strip = false

[workspace.package]
version = "0.28.1"
edition = "2024"
license = "BUSL-1.1"
repository = "https://github.com/styrene-lab/omegon"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio-util = { version = "0.7", features = ["compat"] }
indexmap = { version = "2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
ulid = { version = "1", features = ["serde"] }

# Flynt vault types — used by sentry::flynt_board to surface flynt
# kanban tasks to the autonomous executor. Lightweight types-only crate
# (no comrak/notify); we read the flynt sqlite directly via rusqlite to
# avoid pulling flynt-store's heavier dep tree.
flynt-models = "0.9.0"
