[workspace]
resolver = "2"
members = [
    "crates/omegon", "crates/omegon-extension",
    "crates/omegon-git",
    "crates/omegon-memory",
    "crates/omegon-secrets",
    "crates/omegon-traits",
    "crates/opsx-core",
]

[profile.release]
lto = "fat"
strip = true
codegen-units = 1
opt-level = 3
panic = "abort"

# Fast release builds for development iteration. Use with:
#   cargo build --profile dev-release -p omegon
# Produces an optimized binary without the 8-16GB RAM link-time cost
# of full LTO. ~90% of release performance, ~10% of link time.
[profile.dev-release]
inherits = "release"
lto = "thin"
codegen-units = 4
strip = false

[workspace.package]
version = "0.15.26-rc.2"
edition = "2024"
license = "BUSL-1.1"
repository = "https://github.com/styrene-lab/omegon"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio-util = "0.7"
indexmap = { version = "2", features = ["serde"] }
