[package]
name = "omegon-browser"
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"
description = "Omegon extension wrapping Vercel agent-browser for browser automation"

[workspace]

[dependencies]
async-trait = "0.1"
omegon-extension = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "time"] }
