[package]
name = "omegon-tdd-savepoint"
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"
description = "Omegon native extension for deterministic TDD savepoint evidence"

[workspace]

[dependencies]
anyhow = "1"
async-trait = "0.1"
notify = "8"
omegon-extension = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
