[package]
name = "omegon-opsx"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OpenSpec lifecycle FSM — enforced state transitions for design nodes, changes, and milestones"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
