[package]
name = "omegon-secrets"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Secret resolution, output redaction, and tool guards for Omegon"

# Features:
#   agent (default) — Adds redact_content() for omegon ContentBlock
#     vectors and redact_content_blocks() on the Redactor. Pulls in
#     omegon-traits.
#   (no features) — Standalone secret management: keyring, env var
#     recipes, Aho-Corasick redaction, path guards, OAuth flows.
#     Use redact_in_place(&mut String) for composable redaction
#     without omegon types. No omegon dependency.
[features]
default = ["agent"]
agent = ["dep:omegon-traits"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
omegon-traits = { path = "../omegon-traits", optional = true }
keyring = { version = "3", features = ["apple-native", "linux-native"] }
secrecy = { version = "0.10", features = ["serde"] }
zeroize = "1"
aho-corasick = "1"
rusqlite = { workspace = true }
aes-gcm = "0.10"
argon2 = "0.5"
hex = "0.4"
getrandom = "0.2"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
url = "2"
globset = "0.4"
regex = "1"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
mockito = "1"
tokio-test = "0.4"
