[package]
name = "omegon"
description = "Rust-native agent loop and lifecycle engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "omegon"
path = "src/main.rs"

[dependencies]
omegon-extension = "0.25"
omegon-traits = { path = "../omegon-traits" }
omegon-git = { path = "../omegon-git" }
git2 = { version = "0.20", features = ["vendored-libgit2", "vendored-openssl"] }
shlex = "1.3"
agent-client-protocol = { version = "0.12", features = ["unstable"] }
ignore = "0.4"
grep-regex = "0.1"
grep-matcher = "0.1"
omegon-memory = { path = "../omegon-memory", features = ["agent"] }
omegon-codescan = { path = "../omegon-codescan" }
omegon-secrets = { path = "../omegon-secrets", features = ["agent"] }
omegon-opsx = { path = "../omegon-opsx" }
omegon-skills = { path = "../omegon-skills" }
omegon-web = { path = "../omegon-web" }
tokio = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
rusqlite = { workspace = true }
tokio-util = { workspace = true }
indexmap = { workspace = true }
flynt-models = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6.0.0"
socket2 = { version = "0.5", features = ["all"] }
unicode-truncate = "2.0"
chrono = "0.4"
libc = "0.2"
regex-lite = "0.1"
url = "2"
ratatui = "0.30.0"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
tui-syntax-highlight = "0.2"
tachyonfx = { version = "0.25.0", features = ["sendable"] }
crossterm = "0.29.0"
reqwest = { version = "0.13.2", features = ["json", "stream", "blocking"] }
tokio-stream = "0.1.18"
sha2 = "0.10.9"
secrecy = "0.10"
sysinfo = "0.33"
getrandom = "0.4.2"
open = "5.3.3"
tracing-appender = "0.2.4"
unicode-width = "0.2.2"
ratatui-image = { version = "11.0.2", default-features = false, features = ["crossterm", "image-defaults"] }
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
axum = { version = "0.8.8", features = ["ws", "macros"] }
tower-http = { version = "0.6.8", features = ["cors"] }
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"
futures = "0.3"
futures-util = "0.3.32"
base64 = "0.22"
hmac = "0.12"
ansi-to-tui = "8.0"
tui-tree-widget = "0.24"
ratatui-toaster = "0.1"
ratatui-textarea = { version = "0.9.1", features = ["crossterm"] }
tui-popup = "0.7"
hyperrat = "0.1"
rmcp = { version = "1.2", features = ["transport-child-process", "client", "transport-streamable-http-client-reqwest", "auth"], default-features = false }
tar = "0.4"
flate2 = "1.0"
sigstore = { version = "0.13.0", default-features = false, features = ["cosign", "rustls-tls"] }
x509-parser = "0.17"
rpassword = "7"
rpkl = "0.8"
percent-encoding = "2"
styrene-mqtt = "0.1.0"
styrene-rbac = "0.1.0"
omegon-rbac = { path = "../omegon-rbac" }
cron = "0.16"
notify = "8.0"
content_inspector = "0.2"
mime_guess = "2"
portable-pty = "0.9.0"

# Local embedding (optional — adds ~15MB ONNX Runtime to binary)
ort = { version = "2.0.0-rc.12", optional = true, features = ["ndarray"] }
tokenizers = { version = "0.23", optional = true, default-features = false, features = ["onig"] }
ndarray = { version = "0.17", optional = true }

[features]
default = []
nex = []
local-embeddings = ["dep:ort", "dep:tokenizers", "dep:ndarray"]

[dev-dependencies]
insta = "1.46"
tempfile = "3.27.0"
