[package]
name = "styrene-work-relations"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
styrene-work = { path = "../styrene-work" }

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
